--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
-        "autoprefixer": "^10.4.20",
+        "@tailwindcss/vite": "^4.1.12",
+        "autoprefixer": "^10.4.21",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.5.1",
+        "postcss": "^8.5.6",
         "postcss-nesting": "^13.0.1",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.12",
         "vite": "^5.0.0"
     },
     "dependencies": {
